--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <body>
     <div class="card">
-        <img src="/main-image.svg" class="main-image" </div>
+        <img src="./main-image.svg" class="main-image" </div>
         <h1 class="title">Order Summary</h1>
         <p class="songs-text">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
 
         <div class="an-plan-main">
-            <img src="/music-icon.svg" class="music-icon">
+            <img src="./music-icon.svg" class="music-icon">
             <div class="price-card">
                 <h2 class="annual-plan">Annual Plan</h2>
                 <p class="price">$59.99/year</p>
